welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:4: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
ecritMessage()
^Diagonal:9: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
	ecritMessage();
        ^Diagonal:11: error: not found: value setPose
	setPose(getX()+1,getY()-1)
        ^